--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 	<head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Charity 5050 Raffle</title>
+        <title>Charity5050-Raffle</title>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&Source+Sans+Pro:wght@300;400;600;700;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -17,10 +17,10 @@
     <body class="home-page">
         <div class="homesection">
             <div class="head_wrapper">
-            <div class="container">
+                <div class="container">
                 <nav class="navbar navbar-expand-md navbar-light ">
                     <a class="navbar-brand" href="#">
-                            <img src="images/CharityLogo.png" alt="Charity-logo">
+                            <img src="images/CharityLogo.png" alt="Charity-raffle-logo">
                         </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
