--- a/css/landing.html
+++ b/css/landing.html
@@ -3,7 +3,7 @@
 	<head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Charity 5050 Raffle</title>
+        <title>Charity5050-Raffle</title>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&Source+Sans+Pro:wght@300;400;600;700;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/owl.carousel.min.css">
