--- a/landing.html
+++ b/landing.html
@@ -10,8 +10,6 @@
         <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
         <script src="https://kit.fontawesome.com/f17b18449a.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-        <!-- Boxicons CSS -->
-        <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/landingstyle.css"> 
     </head>
@@ -23,7 +21,7 @@
                     <nav class="navbar navbar-light">
                         <div class="nav_menu_wrpper ml-auto">
                             <a class="nav-logo" href="#">
-                                    <img src="images/5050-img.png" alt="Charity-logo">
+                                    <img src="images/5050-img.png" alt="Charity-raffle-logo">
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                     <div class="toggle_button">
