--- a/landing.html
+++ b/landing.html
@@ -14,9 +14,9 @@
         <link rel="stylesheet" href="css/landingstyle.css"> 
     </head>
 
-    <body>
-        <div class="landing_menu_wrapper">
-            <div class="menu_wrap">
+    <body class="raffle-card-page">
+        <div class="landing_menu_wrapper ">
+            <div class="menu_wrap ">
                 <div class="container">
                     <nav class="navbar navbar-light">
                         <div class="nav_menu_wrpper ml-auto">
@@ -52,43 +52,43 @@
             </div>
             <div class="puma_wrapper">
                 <div class="container">
-                <div class="puma_wrap_content">
-                    <div class="puma_service_box">
-                        <div class="service_header">
-                            <div class="row align-items-center">
-                                <div class="col-md-7">
-                                    <div class="left">
-                                        <img src="images/pumalogo.svg" alt="puma-logo">
-                                        <span>Puma Charity Service</span>
+                    <div class="puma_wrap_content">
+                        <div class="puma_service_box">
+                            <div class="service_header">
+                                <div class="row align-items-center">
+                                    <div class="col-md-7">
+                                        <div class="left">
+                                            <img src="images/pumalogo.svg" alt="puma-logo">
+                                            <span>Puma Charity Service</span>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col-md-5">
-                                    <div class="right">
-                                        <p>Visit us on</p>
-                                        <div class="media_wrap">
-                                            <a><img src="images/Facebook.svg" alt=""></a>
-                                            <a><img src="images/Twitter.svg" alt=""></a>
-                                            <a><img src="images/Instagram.svg" alt=""></a>
+                                    <div class="col-md-5">
+                                        <div class="right">
+                                            <p>Visit us on</p>
+                                            <div class="media_wrap">
+                                                <a><img src="images/Facebook.svg" alt=""></a>
+                                                <a><img src="images/Twitter.svg" alt=""></a>
+                                                <a><img src="images/Instagram.svg" alt=""></a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="service_body">
-                            <div class="service_content">
-                                <p class="top-title">Ending soon</p>
-                                <h3>Demo Holiday Raffle</h3>
-                                <p class="text">Your support of our Fall Lottery makes it possible to provide an
-                                     exceptional standard of care for thousands of animals every year. 
-                                </p>
-                                <div class="text_button">
-                                    <a href="" class="btn btn-positive">Buy tickets</a>
+                            <div class="service_body">
+                                <div class="service_content">
+                                    <p class="top-title">Ending soon</p>
+                                    <h3>Demo Holiday Raffle</h3>
+                                    <p class="text">Your support of our Fall Lottery makes it possible to provide an
+                                        exceptional standard of care for thousands of animals every year. 
+                                    </p>
+                                    <div class="text_button">
+                                        <a href="" class="btn btn-positive">Buy tickets</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
             </div> 
         </div>
         
