--- a/raffles.html
+++ b/raffles.html
@@ -40,8 +40,7 @@
                 </nav>
             </div> 
         </div>
-
-
+        <div class="overlay"></div>
         <div class="filter_wrapper"> 
             <div class="container">
                 <div class="inner_content">
@@ -54,7 +53,7 @@
                         <div class="right">
                             <span>
                                 <input type="text" id="filterbox" placeholder="Filters" readonly>
-                                <div class="filter_menu_wrap">
+                                <div class="filter_box_menu">
                                     <div class="row">
                                         <div class="col-md-6">
                                             <label class="label">Sort by</label>
@@ -74,26 +73,24 @@
                                                 <input type="radio" checked="checked" name="radio">
                                                 <span class="checkmark"></span>
                                             </label>
-
                                             <div class="tab_wrapper">
                                                 <label class="label">Time</label>
                                                 <nav>
                                                     <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                                                      <a class="nav-item nav-link" id="this-week-tab" data-toggle="tab" href="#this-week" role="tab" aria-controls="this-week" aria-selected="true">This week</a>
-                                                      <a class="nav-item nav-link active" id="next-week-tab" data-toggle="tab" href="#next-week" role="tab" aria-controls="next-week" aria-selected="false">Next week</a>
-                                                      <a class="nav-item nav-link" id="next-month-tab" data-toggle="tab" href="#next-month" role="tab" aria-controls="next-month" aria-selected="false">Next month</a>
+                                                      <a class="nav-item nav-link" id="this-week-tab" data-toggle="tab" href="#this-week" role="tab" aria-selected="true">This week</a>
+                                                      <a class="nav-item nav-link active" id="next-week-tab" data-toggle="tab" href="#next-week" role="tab" aria-selected="false">Next week</a>
+                                                      <a class="nav-item nav-link" id="next-month-tab" data-toggle="tab" href="#next-month" role="tab" aria-selected="false">Next month</a>
                                                     </div>
                                                   </nav>
-                                                  <div class="tab-content" id="nav-tabContent">
+                                                  <!-- <div class="tab-content">
                                                     <div class="tab-pane fade show active" id="this-week" role="tabpanel" aria-labelledby="this-week-tab">
                                                       This week</div>
                                                     <div class="tab-pane fade" id="next-week" role="tabpanel" aria-labelledby="next-week-tab">
                                                       Next week </div>
                                                     <div class="tab-pane fade" id="next-month" role="tabpanel" aria-labelledby="next-month-tab">
                                                       Next month </div>
-                                                  </div>
+                                                  </div> -->
                                             </div>
-
                                             <div class="price_range_wrap">
                                                 <label  class="label">Raffle price range</label>
                                                 <div id="slider"></div>
@@ -107,7 +104,7 @@
                                                     <span class="checkmark"></span>
                                                 </label>
                                                 <label class="checkbox_content">Texas
-                                                    <input type="checkbox" checked="checked">
+                                                    <input type="checkbox" >
                                                     <span class="checkmark"></span>
                                                 </label>
                                                 <label class="checkbox_content">Kansas
@@ -115,15 +112,15 @@
                                                     <span class="checkmark"></span>
                                                 </label>
                                                 <label class="checkbox_content">Baskerville
-                                                    <input type="checkbox" checked="checked">
+                                                    <input type="checkbox">
                                                     <span class="checkmark"></span>
                                                 </label>
                                                 <label class="checkbox_content">Oklahama
-                                                    <input type="checkbox" checked="checked">
+                                                    <input type="checkbox">
                                                     <span class="checkmark"></span>
                                                 </label>
                                                 <label class="checkbox_content">New York
-                                                    <input type="checkbox" checked="checked">
+                                                    <input type="checkbox">
                                                     <span class="checkmark"></span>
                                                 </label>
                                             </div>
@@ -133,7 +130,6 @@
                                         </div>
                                     </div>
                                 </div>
-                            
                             
                             </span>    
                             <label class="checkbox_content">Show closed raffles
@@ -213,7 +209,7 @@
                                     </div>
                                 </div>
                                 <div class="card_body">
-                                    <h6 class="card-title">Spring season fundraising<i class="fas fa-chevron-right"></i>
+                                    <h6 class="card-title">Spring season fundraising <i class="fas fa-chevron-right"></i>
                                     </h6>
                                     <div class="card_footer">
                                         <p>Your support of Fall Lottery makes it possible to provide an exceptional standard of care for thousands…</p>
@@ -441,5 +437,27 @@
         <script src="js/owl.carousel.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="js/smooth-scroll.polyfills.min.js"></script>
+        <script>
+        $(document).ready(function(){    
+            $('#filterbox').on('click',function(){
+                $('.overlay').css('display','block');
+                $('.filter_box_menu').css('display','initial');
+            });
+            $('.overlay').on('click',function(){
+                $('.overlay').css('display','none');
+                $('.filter_box_menu').css('display','none');
+            });
+        });
+        $("#slider").ionRangeSlider({
+			type: "double",
+			grid: false,
+			min: 0,
+			max: 3000,
+			from: 1500,
+			to: 2000,
+			prefix: "$"
+		});
+        </script>
+   
     </body>
 </html>        
