--- a/header-3.html
+++ b/header-3.html
@@ -14,7 +14,7 @@
 
     <body class="raffle_page">
         <div class="overlay"></div>
-        <div class="homesection raffle_header header header-2">
+        <div class="homesection raffle_header header-3">
             <div class="container">
                 <nav class="navbar navbar-expand-md navbar-light ">
                     <a class="navbar-brand" href="#">
@@ -40,8 +40,8 @@
                         </div>
                     </div>                     
                 </nav>
-            
             </div>
+            
         <div class="filter_wrapper"> 
             <div class="container">
                 <div class="inner_content">
